
* Current
** Added
Added support for global intializers
Introduced base offset local and argument load/store
Added function pointer requirement into M2-Planet
Added test24 - get_machine
Added General_Recursion to reduce complexity
Added uniqueID to purge all code segments that recreate it's functionality
Added struct Char arrays for structs

** Changed
Made String naming 100% deterministic
Broke up all_expr to simplify any manual implementations
Cleaned up function calls
Simplify variable looksup
Reused a union to reduce globals
Brought back common recursion
Reorged logic tree to reduce complexity
Simplified expression
Changed EOF detection logic to deal with unsigned bits
Reduced Memory usage down from 50MB to 2MB
Simplified Tokenizer logic for easier implementation and understanding

** Fixed
Correct bug in how \" is treated
Clean up of & when && should have been used
Made test22 for consistent
Fixed !c->a regression
Fixed ARM platform build
Reduced Memory usage per Token to size of string plus fixed padding

** Removed
Removed need for string copying in M2-Planet
Wasted steps in stack offsets
Need for stack relative offsets
Extra stack walks
Removed need for current_function
Removed unused values
Removed legacy x86 << >> hacks at the cost of more instructions

* 0.2 - 2018-06-21
** Added
Added type promotion to allow progress on mes.c
Add support for anonymous unions inside of structs
Added support for passing of function pointers via FUNCTION
Added support for Local functions
Added support for EOF
Added additional debug information to M2-Planet
Added line numbers and files names for errors in parsing to help debug
Added support for close and fclose
Added prototype support for chmod
Added basic support for escape strings
Added support for continue
Added string_length function to string.c
Added function numerate_string for converting string to integer
Added supporting hex2char, char2hex, dec2char and char2dec functions
Added support bitwise xor