@@ -30,6 +30,7 @@ void file_print(char* s, FILE* f);
 int match(char* a, char* b);
 char* copy_string(char* target, char* source);
 void reset_hold_string();
+int in_set(int c, char* s);
 
 struct type
 {
