@@ -23,7 +23,7 @@ int char2hex(int c);
 
 char upcase(char a)
 {
-	if((97 <= a) && (122 >= a))
+	if(in_set(a, "abcdefghijklmnopqrstuvwxyz"))
 	{
 		a = a - 32;
 	}
@@ -48,74 +48,44 @@ int hexify(int c, int high)
 	return i;
 }
 
+int escape_lookup(char* c);
 int weird(char* string)
 {
-	if(0 == string[0]) return FALSE;
-	if('\\' == string[0])
+	int c;
+	string = string + 1;
+weird_reset:
+	c = string[0];
+	if(0 == c) return FALSE;
+	if('\\' == c)
 	{
-		if('x' == string[1])
-		{
-			if('0' == string[2]) return TRUE;
-			else if('1' == string[2]) return TRUE;
-			else if('2' == string[2])
-			{
-				if('2' == string[3]) return TRUE;
-				else return weird(string+3);
-			}
-			else if('3' == string[2])
-			{
-				if('A' == string[3]) return TRUE;
-				else return weird(string+3);
-			}
-			else if('8' == string[2]) return TRUE;
-			else if('9' == string[2]) return TRUE;
-			else if('a' == string[2]) return TRUE;
-			else if('A' == string[2]) return TRUE;
-			else if('b' == string[2]) return TRUE;
-			else if('B' == string[2]) return TRUE;
-			else if('c' == string[2]) return TRUE;
-			else if('C' == string[2]) return TRUE;
-			else if('d' == string[2]) return TRUE;
-			else if('D' == string[2]) return TRUE;
-			else if('e' == string[2]) return TRUE;
-			else if('E' == string[2]) return TRUE;
-			else if('f' == string[2]) return TRUE;
-			else if('F' == string[2]) return TRUE;
-			else return weird(string+3);
-		}
-		else if('n' == string[1])
-		{
-			if(':' == string[2]) return TRUE;
-			return weird(string+2);
-		}
-		else if('t' == string[1])
-		{
-			return weird(string+2);
-		}
-		else if('"' == string[1]) return TRUE;
-		else
-		{
-			return weird(string+3);
-		}
+		c = escape_lookup(string);
+		if('x' == string[1]) string = string + 2;
+		string = string + 1;
 	}
-	return weird(string+1);
+
+	if(!in_set(c, "\t\n !#$%&'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\]^_`abcdefghijklmnopqrstuvwxyz{|}~")) return TRUE;
+	if(in_set(c, " \t\n\r") && (':' == string[1])) return TRUE;
+	string = string + 1;
+	goto weird_reset;
 }
 
 /* Lookup escape values */
 int escape_lookup(char* c)
 {
-	if((c[0] == '\\') & (c[1] == 'x'))
+	if('\\' != c[0]) return c[0];
+
+	if(c[1] == 'x')
 	{
 		int t1 = hexify(c[2], TRUE);
 		int t2 = hexify(c[3], FALSE);
 		return t1 + t2;
 	}
-	else if((c[0] == '\\') & (c[1] == 'n')) return 10;
-	else if((c[0] == '\\') & (c[1] == 't')) return 9;
-	else if((c[0] == '\\') & (c[1] == '\\')) return 92;
-	else if((c[0] == '\\') & (c[1] == '\'')) return 39;
-	else if((c[0] == '\\') & (c[1] == '"')) return 34;
-	else if((c[0] == '\\') & (c[1] == 'r')) return 13;
+	else if(c[1] == 'n') return 10;
+	else if(c[1] == 't') return 9;
+	else if(c[1] == '\\') return 92;
+	else if(c[1] == '\'') return 39;
+	else if(c[1] == '"') return 34;
+	else if(c[1] == 'r') return 13;
 
 	file_print("Unknown escape recieved: ", stderr);
 	file_print(c, stderr);
@@ -126,36 +96,29 @@ int escape_lookup(char* c)
 /* Deal with human strings */
 char* collect_regular_string(char* string)
 {
-	int i = 0;
 	string_index = 0;
 
-	hold_string[0] = '"';
-	while(string[i] != 0)
+collect_regular_string_reset:
+	if(string[0] == '\\')
 	{
-		if((string[i] == '\\') & (string[i + 1] == 'x'))
-		{
-			hold_string[string_index] = escape_lookup(string + i);
-			i = i + 4;
-		}
-		else if(string[i] == '\\')
-		{
-			hold_string[string_index] = escape_lookup(string + i);
-			i = i + 2;
-		}
-		else
-		{
-			hold_string[string_index] = string[i];
-			i = i + 1;
-		}
-
-		string_index = string_index + 1;
+		hold_string[string_index] = escape_lookup(string);
+		if (string[1] == 'x') string = string + 2;
+		string = string + 2;
+	}
+	else
+	{
+		hold_string[string_index] = string[0];
+		string = string + 1;
 	}
 
+	string_index = string_index + 1;
+	if(string[0] != 0) goto collect_regular_string_reset;
+
+	hold_string[string_index] = '"';
+	hold_string[string_index + 1] = '\n';
 	char* message = calloc(string_index + 3, sizeof(char));
 	copy_string(message, hold_string);
 	reset_hold_string();
-	message[string_index] = '"';
-	message[string_index + 1] = '\n';
 	return message;
 }
 
@@ -168,41 +131,31 @@ char* collect_weird_string(char* string)
 	char* table = "0123456789ABCDEF";
 
 	hold_string[0] = '\'';
-	while(string[i] != 0)
+collect_weird_string:
+	hold_string[string_index] = ' ';
+	temp = escape_lookup(string + i);
+	hold_string[string_index + 1] = table[(temp >> 4)];
+	hold_string[string_index + 2] = table[(temp & 15)];
+
+	if(string[i] == '\\')
 	{
-		hold_string[string_index] = ' ';
-
-		if((string[i] == '\\') & (string[i + 1] == 'x'))
-		{
-			hold_string[string_index + 1] = upcase(string[i + 2]);
-			hold_string[string_index + 2] = upcase(string[i + 3]);
-			i = i + 4;
-		}
-		else if(string[i] == '\\')
-		{
-			temp = escape_lookup(string + i);
-			hold_string[string_index + 1] = table[(temp >> 4)];
-			hold_string[string_index + 2] = table[(temp & 15)];
-			i = i + 2;
-		}
-		else
-		{
-			hold_string[string_index + 1] = table[(string[i] >> 4)];
-			hold_string[string_index + 2] = table[(string[i] & 15)];
-			i = i + 1;
-		}
-
-		string_index = string_index + 3;
+		if(string[i + 1] == 'x') i = i + 2;
+		i = i + 1;
 	}
+	i = i + 1;
+
+	string_index = string_index + 3;
+	if(string[i] != 0) goto collect_weird_string;
+
+	hold_string[string_index] = ' ';
+	hold_string[string_index + 1] = '0';
+	hold_string[string_index + 2] = '0';
+	hold_string[string_index + 3] = '\'';
+	hold_string[string_index + 4] = '\n';
 
 	char* hold = calloc(string_index + 6, sizeof(char));
 	copy_string(hold, hold_string);
 	reset_hold_string();
-	hold[string_index] = ' ';
-	hold[string_index + 1] = '0';
-	hold[string_index + 2] = '0';
-	hold[string_index + 3] = '\'';
-	hold[string_index + 4] = '\n';
 	return hold;
 }
 
@@ -210,6 +163,6 @@ char* collect_weird_string(char* string)
 char* parse_string(char* string)
 {
 	/* the string */
-	if((weird(string)) || ':' == string[1]) return collect_weird_string(string);
+	if(weird(string)) return collect_weird_string(string);
 	else return collect_regular_string(string);
 }
